Finally fixed the scrollbar

--- a/website/styles/globals.css
+++ b/website/styles/globals.css
@@ -36,35 +36,28 @@
 }
 
 @layer utilities {
-	/* Hide scrollbar */
-	.scrollbar-hidden {
-		&::-webkit-scrollbar {
-			display: none;
-		}
+	.scrollbar-hidden::-webkit-scrollbar {
+	  display: none;
 	}
-
-	.scrollbar {
-		/* Size */
-		&::-webkit-scrollbar {
-			@apply block w-[10px];
-		}
-
-		/* Track */
-		&::-webkit-scrollbar-track {
-			@apply bg-grey-200 dark:bg-grey-700;
-		}
-
-		/* Handle */
-		&::-webkit-scrollbar-thumb {
-			@apply bg-grey-900/20 dark:bg-grey-50/20 rounded-full;
-		}
-
-		/* Handle on hover */
-		&::-webkit-scrollbar-thumb:hover {
-			@apply bg-grey-900/40 dark:bg-grey-50/40;
-		}
+	.scrollbar-visible::-webkit-scrollbar {
+		@apply block w-[10px];
 	}
-}
+ 
+	/* Track */
+	.scrollbar-slim::-webkit-scrollbar-track {
+	  @apply bg-grey-200 dark:bg-grey-700;
+	}
+ 
+	/* Handle */
+	.scrollbar-slim::-webkit-scrollbar-thumb {
+	  @apply bg-grey-900/20 dark:bg-grey-50/20 rounded-full;
+	}
+ 
+	/* Handle on hover */
+	.scrollbar-slim::-webkit-scrollbar-thumb:hover {
+	  @apply bg-grey-900/40 dark:bg-grey-50/40;
+	}
+ }
 
 html {
 	@apply text-[18px] lg:text-[16px];
@@ -73,35 +66,9 @@ html {
 
 body {
 	@apply text-grey-500 dark:text-grey-300 text-base;
+	@apply scrollbar-hidden;
 }
 
 a {
 	@apply text-primary-500 dark:text-primary-400;
-}
-
-/* Hide scrollbar */
-::-webkit-scrollbar {
-	display: none;
-}
-
-@media screen and (min-width: 768px) {
-	/* Size */
-	::-webkit-scrollbar {
-		@apply block w-[10px];
-	}
-
-	/* Track */
-	::-webkit-scrollbar-track {
-		@apply bg-grey-200 dark:bg-grey-700;
-	}
-
-	/* Handle */
-	::-webkit-scrollbar-thumb {
-		@apply bg-grey-900/20 dark:bg-grey-50/20 rounded-full;
-	}
-
-	/* Handle on hover */
-	::-webkit-scrollbar-thumb:hover {
-		@apply bg-grey-900/40 dark:bg-grey-50/40;
-	}
 }
